--- a/salazarServiceV2/src/styleLeaves/Header.css
+++ b/salazarServiceV2/src/styleLeaves/Header.css
@@ -31,6 +31,18 @@
 }
 
 .navbar{
+   
+        position: fixed;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+        padding-top: .5rem;
+        padding-bottom: .5rem;
+        z-index: 999;
+        width: 100%;
+        top: 0;
+      
     padding-top: .1rem;
 }
 
