--- a/salazarServiceV2/src/styleLeaves/Carousel.css
+++ b/salazarServiceV2/src/styleLeaves/Carousel.css
@@ -11,12 +11,9 @@
 
 
 .carousel {
-    margin-top: 0.5%;
-    margin-right: 1%;
-    margin-left: 1%;
-    box-shadow: -2px 0px 20px 10px rgba(41,88,134,0.75);
-    -webkit-box-shadow: -2px 0px 20px 10px rgba(41,88,134,0.75);
-    -moz-box-shadow: -2px 0px 20px 10px rgba(41,88,134,0.75);
+    margin-top: 3%;
+
+    box-shadow: -2px 0px 20px 10px rgba(96, 166, 234, 0.75);
 
   }
 
@@ -24,7 +21,7 @@
 
  .carousel-indicators [data-bs-target]{
 
-    background-color: #25abff;
+    background-color: #ffffff;
 
  }
 
@@ -68,9 +65,9 @@ font-size: x-small;
 }
 
 .carousel-item {
-  transition: transform 2s ease-in-out;
+  transition: transform 1s ease-in-out;
 }
 .carousel-fade .active.carousel-item-start,
 .carousel-fade .active.carousel-item-end {
-  transition: opacity 0s 2.5s;
+  transition: opacity 0s 1.5s;
 }
