--- a/salazarServiceV2/src/styleLeaves/Service.css
+++ b/salazarServiceV2/src/styleLeaves/Service.css
@@ -1,47 +1,131 @@
+
+.flexcss {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+   
+}
+
+
+
+.service {
+	
+	padding-bottom: 20px;
+	background: #f4f4f4;
+	margin-top: 10px;
+}
+
+.service .titlepage span {
+	color: #3d3c3c
+}
+
+.service .service-box figure {
+	margin: 0px;
+}
+
+.service .service-box figure img {
+	width: 100%;
+	border-radius: 20px;
+}
+
+.green {
+	background-color: #6fb936;
+}
+
+
+
+
+.service .titlepage {
+	text-align: center;
+	padding-bottom: 2%;
+	padding-top: 3%;
+  }
+
+  .service .titlepage h2 {
+	padding: 0px 0px 6px 0px;
+	font-size: 40px;
+	font-weight: bold;
+	color: rgba(15, 163, 255, 0.9);
+	line-height: 46px;
+	border-bottom: rgba(15, 163, 255, 0.9) solid 1px;
+	width: 210px;
+	margin: 0 auto;
+	  margin-bottom: 0px;
+	margin-bottom: 0px;
+	margin-bottom: 20px;
+  }
+
+
 .contenedorServices {
-    width: 100%;
-    z-index: 1;
+	position: relative;
+	width: 100%;
+	z-index: 1;
+  
+	height: 200px;
   }
-
-
-.contenedorServices figure .capaFigure {
-    height: 100%;
-    position: absolute;
-    width: 92.2%;
-    top: 0;
-    border-radius: 20px;
-    background: transparent;
-    text-align: center;
-    transition: 1s;
-
-    box-shadow: 0px 0px 2px; 
+  
+  
+  .service .service-box figure {
+	margin: 0px;
+  
+	height: 100%;
   }
-
-  .Imgfancybox {
-    width: 100%;
-    height: 200px;
-
-border-radius: 20px
+  
+  .img-fluid {
+	max-width: 100%;
+	height: 100%;
   }
-
-  .thumb {
-    margin-bottom: 30px;
-  }
-
-  .p1figure {
-    color: rgb(255, 255, 255);
-    visibility: hidden;
+  
+  .contenedorServices figure .capaFigure {
+	height: 100%;
+	position: absolute;
+	width: 100%;
+	top: 0;
+	border-radius: 20px;
+	background: transparent;
+	text-align: center;
+	transition: 1s;
+	box-shadow: 0px 0px 0px;
   
   }
-
+  
   .contenedorServices figure .capaFigure .afigure {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: 0.4s;
-    color: rgb(255, 255, 255);
-    box-shadow: 0px 2px 20px black;
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	transition: 0.4s;
+	color: rgb(255, 255, 255);
+	box-shadow: 0px 2px 20px black;
+	border-radius: 10px;
+	background-color: rgba(0, 0, 0, 0.7);
+	border: solid 3px black;
   }
+#demo {
+	height: 100%;
+	position: relative;
+	overflow: hidden;
+}
+
+.thumb {
+	margin-bottom: 30px;
+}
+
+.green {
+	background-color: #6fb936;
+}
+
+
+.p1figure {
+	color: rgb(255, 255, 255);
+	visibility: hidden;
+	font-size: small;
+	margin-top: 10%;
+  }
+
+  @media only screen and (max-width: 999px)
+{  .p1figure {
+	font-size: smaller;
+	margin-top: 15%;
+  }}
+/** end service section **/
