--- a/salazarServiceV2/src/styleLeaves/Service.css
+++ b/salazarServiceV2/src/styleLeaves/Service.css
@@ -48,7 +48,7 @@
 	color: rgba(15, 163, 255, 0.9);
 	line-height: 46px;
 	border-bottom: rgba(15, 163, 255, 0.9) solid 1px;
-	width: 210px;
+	width: 100%px;
 	margin: 0 auto;
 	  margin-bottom: 0px;
 	margin-bottom: 0px;
@@ -129,3 +129,8 @@
 	margin-top: 15%;
   }}
 /** end service section **/
+
+#lista{
+	text-align: left;
+	border-bottom: rgba(15, 163, 255, 0.9) solid 1px;
+}
